[tool.poetry]
name = "dnd-bot"
version = "0.1.0"
description = ""
authors = ["Egor Polyakov <leftgoga@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
swarm = {git = "https://github.com/openai/swarm.git"}
astra-assistants = "^2.2.2"
python-dotenv = "^1.0.1"
agency-swarm = "^0.3.0"
griptape = "^0.33.1"
speechrecognition = "^3.11.0"
pyaudio = "^0.2.14"
openai-whisper = "^20240930"
sounddevice = "^0.5.1"
gtts = "^2.5.3"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
